--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <main class="about">
     <h2>About Me</h2>
     <p>Hello! I'm <strong>Habib Ubale Aliyu</strong>, a Level 200 Cybersecurity student at Northwest University, Kano. I have a strong interest in ethical hacking, digital forensics, and cybersecurity tools. My goal is to work with international agencies like Interpol to fight cybercrime globally.</p>
-    <img src="https://cdn.pixabay.com/photo/2015/01/08/18/24/startup-593341_1280.jpg" alt="Student Working on Laptop" />
+    <img src="my profile.jpg" alt="Student Working on Laptop" />
   </main>
 
   <footer>
