--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="hero">
       <h2>Cybersecurity Student</h2>
       <p>I am passionate about ethical hacking, digital forensics, and fighting international cybercrime to make the internet safer for everyone.</p>
-      <img src="https://cdn.pixabay.com/photo/2022/01/25/06/35/cyber-6965460_1280.jpg" alt="Cybersecurity Illustration" />
+      <img src="images/me.jpg" alt="Cybersecurity Illustration" />
     </section>
   </main>
 
