--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="hero">
       <h2>Cybersecurity Student</h2>
       <p>I am passionate about ethical hacking, digital forensics, and fighting international cybercrime to make the internet safer for everyone.</p>
-      <img src="images/me.jpg" alt="Cybersecurity Illustration" />
+      <img src="https://www.istockphoto.com/photo/typing-on-laptop-computer-keyboard-and-surfing-the-internet-gm2151295132-572410663" alt="Cybersecurity Illustration" />
     </section>
   </main>
 
